# linux-example-btstack-a2dp-sink

./: CMakeLists.txt  README.md
app/: a2dp_sink.c  bt_audio_linux_platform.c  main.c
app_bt_config/: wiced_bt_cfg.c
app_bt_utils/: app_bt_utils.c  app_bt_utils.h
include/: a2dp_sink.h  bt_audio_linux_platform.h  wiced.h
